fix: video animation mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -639,4 +639,13 @@ input[type=number] {
         width: 70x;
         height: 100px;
     }
+
+    #win-nft {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 100%;
+        object-fit: fill;
+    }
 }
